[gd_scene load_steps=44 format=3 uid="uid://bxfcunlkh1o6o"]

[ext_resource type="Script" path="res://Scenes/roulette.gd" id="1_1wqyc"]
[ext_resource type="Texture2D" uid="uid://dh5nddukucy5a" path="res://Assets/wheel_pos/base.png" id="1_uv8fy"]
[ext_resource type="Texture2D" uid="uid://blgwouruke3v" path="res://Assets/RouletteTable.png" id="2_bk8b3"]
[ext_resource type="Script" path="res://Scenes/wheel.gd" id="2_ujxgk"]
[ext_resource type="PackedScene" uid="uid://cdi17elcele5i" path="res://Scenes/roulette_space.tscn" id="5_q438b"]

[sub_resource type="GDScript" id="GDScript_6m2sd"]
script/source = "extends Area2D

var SPACE_VALUE:String = '1'
var ODDS:float = 1.0/35.0

# Called when the node enters the scene tree for the first time.

func get_odds():
	return ODDS
	
func get_value():
	return SPACE_VALUE
	

func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass
"

[sub_resource type="GDScript" id="GDScript_khmvd"]
script/source = "extends Area2D

var SPACE_VALUE:String = '2'
var ODDS:float = 1.0/35.0

# Called when the node enters the scene tree for the first time.

func get_odds():
	return ODDS
	
func get_value():
	return SPACE_VALUE
	

func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass
"

[sub_resource type="GDScript" id="GDScript_awk0m"]
script/source = "extends Area2D

var SPACE_VALUE:String = '3'
var ODDS:float = 1.0/35.0

# Called when the node enters the scene tree for the first time.

func get_odds():
	return ODDS
	
func get_value():
	return SPACE_VALUE
	

func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass
"

[sub_resource type="GDScript" id="GDScript_wjrqy"]
script/source = "extends Area2D

var SPACE_VALUE:String = '4'
var ODDS:float = 1.0/35.0

# Called when the node enters the scene tree for the first time.

func get_odds():
	return ODDS
	
func get_value():
	return SPACE_VALUE
	

func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass
"

[sub_resource type="GDScript" id="GDScript_d3gib"]
script/source = "extends Area2D

var SPACE_VALUE:String = '5'
var ODDS:float = 1.0/35.0

# Called when the node enters the scene tree for the first time.

func get_odds():
	return ODDS
	
func get_value():
	return SPACE_VALUE
	

func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass
"

[sub_resource type="GDScript" id="GDScript_g0ro3"]
script/source = "extends Area2D

var SPACE_VALUE:String = '6'
var ODDS:float = 1.0/35.0

# Called when the node enters the scene tree for the first time.

func get_odds():
	return ODDS
	
func get_value():
	return SPACE_VALUE
	

func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass
"

[sub_resource type="GDScript" id="GDScript_bv1tv"]
script/source = "extends Area2D

var SPACE_VALUE:String = '7'
var ODDS:float = 1.0/35.0

# Called when the node enters the scene tree for the first time.

func get_odds():
	return ODDS
	
func get_value():
	return SPACE_VALUE
	

func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass
"

[sub_resource type="GDScript" id="GDScript_imrvb"]
script/source = "extends Area2D

var SPACE_VALUE:String = '8'
var ODDS:float = 1.0/35.0

# Called when the node enters the scene tree for the first time.

func get_odds():
	return ODDS
	
func get_value():
	return SPACE_VALUE
	

func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass
"

[sub_resource type="GDScript" id="GDScript_iy4m4"]
script/source = "extends Area2D

var SPACE_VALUE:String = '9'
var ODDS:float = 1.0/35.0

# Called when the node enters the scene tree for the first time.

func get_odds():
	return ODDS
	
func get_value():
	return SPACE_VALUE
	

func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass
"

[sub_resource type="GDScript" id="GDScript_eabdf"]
script/source = "extends Area2D

var SPACE_VALUE:String = '10'
var ODDS:float = 1.0/35.0

# Called when the node enters the scene tree for the first time.

func get_odds():
	return ODDS
	
func get_value():
	return SPACE_VALUE
	

func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass
"

[sub_resource type="GDScript" id="GDScript_jambx"]
script/source = "extends Area2D

var SPACE_VALUE:String = '11'
var ODDS:float = 1.0/35.0

# Called when the node enters the scene tree for the first time.

func get_odds():
	return ODDS
	
func get_value():
	return SPACE_VALUE
	

func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass
"

[sub_resource type="GDScript" id="GDScript_87prv"]
script/source = "extends Area2D

var SPACE_VALUE:String = '12'
var ODDS:float = 1.0/35.0

# Called when the node enters the scene tree for the first time.

func get_odds():
	return ODDS
	
func get_value():
	return SPACE_VALUE
	

func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass
"

[sub_resource type="GDScript" id="GDScript_ihlem"]
script/source = "extends Area2D

var SPACE_VALUE:String = '13'
var ODDS:float = 1.0/35.0

# Called when the node enters the scene tree for the first time.

func get_odds():
	return ODDS
	
func get_value():
	return SPACE_VALUE
	

func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass
"

[sub_resource type="GDScript" id="GDScript_vwj0v"]
script/source = "extends Area2D

var SPACE_VALUE:String = '14'
var ODDS:float = 1.0/35.0

# Called when the node enters the scene tree for the first time.

func get_odds():
	return ODDS
	
func get_value():
	return SPACE_VALUE
	

func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass
"

[sub_resource type="GDScript" id="GDScript_de3f1"]
script/source = "extends Area2D

var SPACE_VALUE:String = '15'
var ODDS:float = 1.0/35.0

# Called when the node enters the scene tree for the first time.

func get_odds():
	return ODDS
	
func get_value():
	return SPACE_VALUE
	

func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass
"

[sub_resource type="GDScript" id="GDScript_sabrs"]
script/source = "extends Area2D

var SPACE_VALUE:String = '16'
var ODDS:float = 1.0/35.0

# Called when the node enters the scene tree for the first time.

func get_odds():
	return ODDS
	
func get_value():
	return SPACE_VALUE
	

func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass
"

[sub_resource type="GDScript" id="GDScript_tnjpe"]
script/source = "extends Area2D

var SPACE_VALUE:String = '17'
var ODDS:float = 1.0/35.0

# Called when the node enters the scene tree for the first time.

func get_odds():
	return ODDS
	
func get_value():
	return SPACE_VALUE
	

func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass
"

[sub_resource type="GDScript" id="GDScript_0gdnh"]
script/source = "extends Area2D

var SPACE_VALUE:String = '18'
var ODDS:float = 1.0/35.0

# Called when the node enters the scene tree for the first time.

func get_odds():
	return ODDS
	
func get_value():
	return SPACE_VALUE
	

func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass
"

[sub_resource type="GDScript" id="GDScript_1m2lv"]
script/source = "extends Area2D

var SPACE_VALUE:String = '19'
var ODDS:float = 1.0/35.0

# Called when the node enters the scene tree for the first time.

func get_odds():
	return ODDS
	
func get_value():
	return SPACE_VALUE
	

func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass
"

[sub_resource type="GDScript" id="GDScript_68tm8"]
script/source = "extends Area2D

var SPACE_VALUE:String = '20'
var ODDS:float = 1.0/35.0

# Called when the node enters the scene tree for the first time.

func get_odds():
	return ODDS
	
func get_value():
	return SPACE_VALUE
	

func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass
"

[sub_resource type="GDScript" id="GDScript_t48pj"]
script/source = "extends Area2D

var SPACE_VALUE:String = '21'
var ODDS:float = 1.0/35.0

# Called when the node enters the scene tree for the first time.

func get_odds():
	return ODDS
	
func get_value():
	return SPACE_VALUE
	

func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass
"

[sub_resource type="GDScript" id="GDScript_4w28f"]
script/source = "extends Area2D

var SPACE_VALUE:String = '22'
var ODDS:float = 1.0/35.0

# Called when the node enters the scene tree for the first time.

func get_odds():
	return ODDS
	
func get_value():
	return SPACE_VALUE
	

func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass
"

[sub_resource type="GDScript" id="GDScript_gg4tq"]
script/source = "extends Area2D

var SPACE_VALUE:String = '23'
var ODDS:float = 1.0/35.0

# Called when the node enters the scene tree for the first time.

func get_odds():
	return ODDS
	
func get_value():
	return SPACE_VALUE
	

func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass
"

[sub_resource type="GDScript" id="GDScript_ldd0s"]
script/source = "extends Area2D

var SPACE_VALUE:String = '24'
var ODDS:float = 1.0/35.0

# Called when the node enters the scene tree for the first time.

func get_odds():
	return ODDS
	
func get_value():
	return SPACE_VALUE
	

func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass
"

[sub_resource type="GDScript" id="GDScript_rbjyb"]
script/source = "extends Area2D

var SPACE_VALUE:String = '25'
var ODDS:float = 1.0/35.0

# Called when the node enters the scene tree for the first time.

func get_odds():
	return ODDS
	
func get_value():
	return SPACE_VALUE
	

func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass
"

[sub_resource type="GDScript" id="GDScript_87tfk"]
script/source = "extends Area2D

var SPACE_VALUE:String = '26'
var ODDS:float = 1.0/35.0

# Called when the node enters the scene tree for the first time.

func get_odds():
	return ODDS
	
func get_value():
	return SPACE_VALUE
	

func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass
"

[sub_resource type="GDScript" id="GDScript_i6gmp"]
script/source = "extends Area2D

var SPACE_VALUE:String = '27'
var ODDS:float = 1.0/35.0

# Called when the node enters the scene tree for the first time.

func get_odds():
	return ODDS
	
func get_value():
	return SPACE_VALUE
	

func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass
"

[sub_resource type="GDScript" id="GDScript_jtteo"]
script/source = "extends Area2D

var SPACE_VALUE:String = '28'
var ODDS:float = 1.0/35.0

# Called when the node enters the scene tree for the first time.

func get_odds():
	return ODDS
	
func get_value():
	return SPACE_VALUE
	

func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass
"

[sub_resource type="GDScript" id="GDScript_i6ycv"]
script/source = "extends Area2D

var SPACE_VALUE:String = '29'
var ODDS:float = 1.0/35.0

# Called when the node enters the scene tree for the first time.

func get_odds():
	return ODDS
	
func get_value():
	return SPACE_VALUE
	

func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass
"

[sub_resource type="GDScript" id="GDScript_4ftij"]
script/source = "extends Area2D

var SPACE_VALUE:String = '30'
var ODDS:float = 1.0/35.0

# Called when the node enters the scene tree for the first time.

func get_odds():
	return ODDS
	
func get_value():
	return SPACE_VALUE
	

func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass
"

[sub_resource type="GDScript" id="GDScript_6hige"]
script/source = "extends Area2D

var SPACE_VALUE:String = '31'
var ODDS:float = 1.0/35.0

# Called when the node enters the scene tree for the first time.

func get_odds():
	return ODDS
	
func get_value():
	return SPACE_VALUE
	

func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass
"

[sub_resource type="GDScript" id="GDScript_aenby"]
script/source = "extends Area2D

var SPACE_VALUE:String = '32'
var ODDS:float = 1.0/35.0

# Called when the node enters the scene tree for the first time.

func get_odds():
	return ODDS
	
func get_value():
	return SPACE_VALUE
	

func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass
"

[sub_resource type="GDScript" id="GDScript_jco33"]
script/source = "extends Area2D

var SPACE_VALUE:String = '33'
var ODDS:float = 1.0/35.0

# Called when the node enters the scene tree for the first time.

func get_odds():
	return ODDS
	
func get_value():
	return SPACE_VALUE
	

func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass
"

[sub_resource type="GDScript" id="GDScript_48pxk"]
script/source = "extends Area2D

var SPACE_VALUE:String = '34'
var ODDS:float = 1.0/35.0

# Called when the node enters the scene tree for the first time.

func get_odds():
	return ODDS
	
func get_value():
	return SPACE_VALUE
	

func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass
"

[sub_resource type="GDScript" id="GDScript_wexrf"]
script/source = "extends Area2D

var SPACE_VALUE:String = '35'
var ODDS:float = 1.0/35.0

# Called when the node enters the scene tree for the first time.

func get_odds():
	return ODDS
	
func get_value():
	return SPACE_VALUE
	

func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass
"

[sub_resource type="GDScript" id="GDScript_nl6lk"]
script/source = "extends Area2D

var SPACE_VALUE:String = '36'
var ODDS:float = 1.0/35.0

# Called when the node enters the scene tree for the first time.

func get_odds():
	return ODDS
	
func get_value():
	return SPACE_VALUE
	

func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass
"

[sub_resource type="GDScript" id="GDScript_lj8qa"]
script/source = "extends Area2D

var SPACE_VALUE:String = 'red'
var ODDS:float = 1.0/2.0

# Called when the node enters the scene tree for the first time.

func get_odds():
	return ODDS
	
func get_value():
	return SPACE_VALUE
	

func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass
"

[sub_resource type="GDScript" id="GDScript_3d1xs"]
script/source = "extends Area2D

var SPACE_VALUE:String = 'black'
var ODDS:float = 1.0/2.0

# Called when the node enters the scene tree for the first time.

func get_odds():
	return ODDS
	
func get_value():
	return SPACE_VALUE
	

func _ready() -> void:
	pass


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass
"

[node name="Roulette Table" type="Node2D"]
script = ExtResource("1_1wqyc")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 1493.0
offset_bottom = 636.0
texture = ExtResource("2_bk8b3")

[node name="Wheel" type="Sprite2D" parent="."]
position = Vector2(246, 320)
scale = Vector2(0.549202, 0.549202)
texture = ExtResource("1_uv8fy")
script = ExtResource("2_ujxgk")

[node name="SpinTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="Label" type="Label" parent="."]
offset_left = 398.0
offset_top = 494.0
offset_right = 514.0
offset_bottom = 541.0
text = "Time Left: "

[node name="Label2" type="Label" parent="."]
offset_left = 398.0
offset_top = 465.0
offset_right = 503.0
offset_bottom = 494.0
text = "Time Left: "

[node name="award" type="Label" parent="."]
offset_left = 834.0
offset_top = 503.0
offset_right = 1067.0
offset_bottom = 539.0
text = "Winnings
"

[node name="DelayTimer" type="Timer" parent="."]
wait_time = 15.0
one_shot = true
autostart = true

[node name="SpinBox" type="SpinBox" parent="."]
offset_left = 640.0
offset_top = 503.0
offset_right = 799.0
offset_bottom = 534.0
max_value = 1e+07
step = 25.0

[node name="1" parent="." groups=["RouletteBet", "StraightUp"] instance=ExtResource("5_q438b")]
position = Vector2(567, 288)
script = SubResource("GDScript_6m2sd")

[node name="2" parent="." groups=["RouletteBet", "StraightUp"] instance=ExtResource("5_q438b")]
position = Vector2(567, 224)
script = SubResource("GDScript_khmvd")

[node name="3" parent="." groups=["RouletteBet", "StraightUp"] instance=ExtResource("5_q438b")]
position = Vector2(567, 161)
script = SubResource("GDScript_awk0m")

[node name="4" parent="." groups=["RouletteBet", "StraightUp"] instance=ExtResource("5_q438b")]
position = Vector2(630, 288)
script = SubResource("GDScript_wjrqy")

[node name="5" parent="." groups=["RouletteBet", "StraightUp"] instance=ExtResource("5_q438b")]
position = Vector2(630, 225)
script = SubResource("GDScript_d3gib")

[node name="6" parent="." groups=["RouletteBet", "StraightUp"] instance=ExtResource("5_q438b")]
position = Vector2(630, 161)
script = SubResource("GDScript_g0ro3")

[node name="7" parent="." groups=["RouletteBet", "StraightUp"] instance=ExtResource("5_q438b")]
position = Vector2(693, 288)
script = SubResource("GDScript_bv1tv")

[node name="8" parent="." groups=["RouletteBet", "StraightUp"] instance=ExtResource("5_q438b")]
position = Vector2(693, 224)
script = SubResource("GDScript_imrvb")

[node name="9" parent="." groups=["RouletteBet", "StraightUp"] instance=ExtResource("5_q438b")]
position = Vector2(693, 161)
script = SubResource("GDScript_iy4m4")

[node name="10" parent="." groups=["RouletteBet", "StraightUp"] instance=ExtResource("5_q438b")]
position = Vector2(756, 288)
script = SubResource("GDScript_eabdf")

[node name="11" parent="." groups=["RouletteBet", "StraightUp"] instance=ExtResource("5_q438b")]
position = Vector2(756, 224)
script = SubResource("GDScript_jambx")

[node name="12" parent="." groups=["RouletteBet", "StraightUp"] instance=ExtResource("5_q438b")]
position = Vector2(756, 161)
script = SubResource("GDScript_87prv")

[node name="13" parent="." groups=["RouletteBet", "StraightUp"] instance=ExtResource("5_q438b")]
position = Vector2(818, 288)
script = SubResource("GDScript_ihlem")

[node name="14" parent="." groups=["RouletteBet", "StraightUp"] instance=ExtResource("5_q438b")]
position = Vector2(818, 224)
script = SubResource("GDScript_vwj0v")

[node name="15" parent="." groups=["RouletteBet", "StraightUp"] instance=ExtResource("5_q438b")]
position = Vector2(818, 161)
script = SubResource("GDScript_de3f1")

[node name="16" parent="." groups=["RouletteBet", "StraightUp"] instance=ExtResource("5_q438b")]
position = Vector2(882, 288)
script = SubResource("GDScript_sabrs")

[node name="17" parent="." groups=["RouletteBet", "StraightUp"] instance=ExtResource("5_q438b")]
position = Vector2(882, 224)
script = SubResource("GDScript_tnjpe")

[node name="18" parent="." groups=["RouletteBet", "StraightUp"] instance=ExtResource("5_q438b")]
position = Vector2(882, 161)
script = SubResource("GDScript_0gdnh")

[node name="19" parent="." groups=["RouletteBet", "StraightUp"] instance=ExtResource("5_q438b")]
position = Vector2(945, 288)
script = SubResource("GDScript_1m2lv")

[node name="20" parent="." groups=["RouletteBet", "StraightUp"] instance=ExtResource("5_q438b")]
position = Vector2(945, 224)
script = SubResource("GDScript_68tm8")

[node name="21" parent="." groups=["RouletteBet", "StraightUp"] instance=ExtResource("5_q438b")]
position = Vector2(945, 161)
script = SubResource("GDScript_t48pj")

[node name="22" parent="." groups=["RouletteBet", "StraightUp"] instance=ExtResource("5_q438b")]
position = Vector2(1007, 288)
script = SubResource("GDScript_4w28f")

[node name="23" parent="." groups=["RouletteBet", "StraightUp"] instance=ExtResource("5_q438b")]
position = Vector2(1007, 224)
script = SubResource("GDScript_gg4tq")

[node name="24" parent="." groups=["RouletteBet", "StraightUp"] instance=ExtResource("5_q438b")]
position = Vector2(1007, 161)
script = SubResource("GDScript_ldd0s")

[node name="25" parent="." groups=["RouletteBet", "StraightUp"] instance=ExtResource("5_q438b")]
position = Vector2(1071, 288)
script = SubResource("GDScript_rbjyb")

[node name="26" parent="." groups=["RouletteBet", "StraightUp"] instance=ExtResource("5_q438b")]
position = Vector2(1071, 224)
script = SubResource("GDScript_87tfk")

[node name="27" parent="." groups=["RouletteBet", "StraightUp"] instance=ExtResource("5_q438b")]
position = Vector2(1071, 161)
script = SubResource("GDScript_i6gmp")

[node name="28" parent="." groups=["RouletteBet", "StraightUp"] instance=ExtResource("5_q438b")]
position = Vector2(1133, 288)
script = SubResource("GDScript_jtteo")

[node name="29" parent="." groups=["RouletteBet", "StraightUp"] instance=ExtResource("5_q438b")]
position = Vector2(1133, 224)
script = SubResource("GDScript_i6ycv")

[node name="30" parent="." groups=["RouletteBet", "StraightUp"] instance=ExtResource("5_q438b")]
position = Vector2(1133, 161)
script = SubResource("GDScript_4ftij")

[node name="31" parent="." groups=["RouletteBet", "StraightUp"] instance=ExtResource("5_q438b")]
position = Vector2(1196, 288)
script = SubResource("GDScript_6hige")

[node name="32" parent="." groups=["RouletteBet", "StraightUp"] instance=ExtResource("5_q438b")]
position = Vector2(1196, 224)
script = SubResource("GDScript_aenby")

[node name="33" parent="." groups=["RouletteBet", "StraightUp"] instance=ExtResource("5_q438b")]
position = Vector2(1196, 161)
script = SubResource("GDScript_jco33")

[node name="34" parent="." groups=["RouletteBet", "StraightUp"] instance=ExtResource("5_q438b")]
position = Vector2(1259, 288)
script = SubResource("GDScript_48pxk")

[node name="35" parent="." groups=["RouletteBet", "StraightUp"] instance=ExtResource("5_q438b")]
position = Vector2(1259, 224)
script = SubResource("GDScript_wexrf")

[node name="36" parent="." groups=["RouletteBet", "StraightUp"] instance=ExtResource("5_q438b")]
position = Vector2(1259, 161)
script = SubResource("GDScript_nl6lk")

[node name="Red" parent="." groups=["RouletteBet"] instance=ExtResource("5_q438b")]
position = Vector2(848, 415)
script = SubResource("GDScript_lj8qa")

[node name="Black" parent="." groups=["RouletteBet"] instance=ExtResource("5_q438b")]
position = Vector2(976, 416)
script = SubResource("GDScript_3d1xs")

[connection signal="value_changed" from="SpinBox" to="." method="_on_spin_box_value_changed"]
